<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/backgroundsample"
android:padding= "10dp"
android:orientation="vertical"


tools:context=".MainActivity">
<!--App Name-->
<TextView
    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="85dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="50dp"
    android:text="@string/hungry_hands"
    android:textColor="@color/white"
    android:textSize="34sp"
    tools:layout_editor_absoluteX="95dp"
    tools:layout_editor_absoluteY="30dp" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="205dp"
    android:layout_marginStart="90dp"
    android:layout_marginEnd="100dp"
    android:contentDescription="@string/Image"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    app:srcCompat="@drawable/csun"
    tools:layout_editor_absoluteX="102dp"
    tools:layout_editor_absoluteY="94dp" />

    <!-- dont modify id and inputType-->
    <EditText

        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="331dp" />


<EditText
    android:id="@+id/editTextEmailAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="90dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:autofillHints=""
    android:background="@color/white"
    android:ems="10"
    android:hint="@string/Email"
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="154dp"
    tools:layout_editor_absoluteY="331dp" />

<EditText
    android:id="@+id/editTextPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="90dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:autofillHints=""
    android:background="@color/white"
    android:ems="10"
    android:hint="@string/Password"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="154dp"
    tools:layout_editor_absoluteY="395dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/csun_red"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="15dp"
        android:text="@string/have_an_account_"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="585dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/csun_red"
        android:text="@string/Loginlinkbutton"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="471dp"
        android:onClick="openMain2"
        tools:ignore="OnClick" />
    <!--Sample Logo-->




</LinearLayout>
