<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsample"
    android:padding= "10dp"
    android:orientation="vertical"


    tools:context=".MainActivity">
    <!--App Name-->
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AppName"
        android:textColor="@color/white"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/will_be_replaced"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:srcCompat="@drawable/csun"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="94dp" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/example_my_csun_edu"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="331dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="395dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/csun_red"
        android:text="@string/loginbutton"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="471dp" />

    <!--Sample Logo-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="45dp"
        android:text="@string/dont_have_an_account_yet"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="585dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/csun_red"
        android:text="@string/signuplinkbutton"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="471dp" />


</LinearLayout>